# viduce

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  start_devenv.sh
.ai/: README.md
.ai/contexts/: development.md  project-detail.md
.claude/: CLAUDE.md
.gemini/: GEMINI.md
.github/workflows/: ci.yml
app_api/: Cargo.toml
app_api/src/: lib.rs  main.rs  upload.rs
cmd/: Cargo.toml  build.rs
cmd/src/: command_runner.rs  engine.rs  ffmpeg.rs  lib.rs  main.rs  realesrgan.rs  upscaler.rs
cmd/src/ffmpeg/: ffmpeg_command.rs  ffmpeg_wrapper.rs
cmd/src/upscaler/: segmind_upscaler.rs
engine/: CMakeLists.txt  engine_api.cc  engine_api.h  main.cc
engine/include/engine/: engine_api.h  frame.h  frame_reader.h  frame_writer.h  media_info.h  upscaler.h  util.h
engine/include/engine/upscale/: model.h  model_impl.h  upscaler.h
engine/src/: CMakeLists.txt  demo.cc  engine_api.cc  frame.cc  frame_reader.cc  frame_writer.cc  upscaler.cc  util.cc
engine/src/upscale/: CMakeLists.txt  model_impl.cc  upscaler.cc
engine/test/: CMakeLists.txt  engine_api_test.cc  frame_reader_test.cc  frame_test.cc  frame_writer_test.cc
engine/test/upscale/: CMakeLists.txt  upscaler_test.cc
ffmpeg/: Cargo.toml
ffmpeg/src/: ffmpeg_wrapper.rs  lib.rs
models/: README.md  convert_model.py  pyproject.toml
upscaler/: Cargo.toml
upscaler/src/: lib.rs  real_esrgan_upscaler.rs  segmind_upscaler.rs  upscaler.rs
util/src/: lib.rs  process_runner.rs  uri_io.rs
util/src/process_runner/: default_runner.rs
viduce-broadcast/web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
viduce-broadcast/web/src/: insertable-streams.d.ts  main.ts  publisher.ts
viduce-engine/: CMakeLists.txt  README.md
viduce-engine/include/engine/: engine_api.h  frame.h  media_info.h
viduce-engine/include/engine/upscale/: model.h  model_impl.h  upscaler.h
viduce-engine/src/: CMakeLists.txt  engine_api.cc  frame.cc
viduce-engine/src/upscale/: model_impl.cc  upscaler.cc
viduce-engine/test/: frame_test.cc  frame_writer_test.cc
viduce-ingest/: Cargo.toml  Dockerfile
viduce-ingest/src/: main.rs
viduce-relay/: .gitignore  Dockerfile  README.md  relay.toml
viduce-streamer/: Dockerfile  index.html  package-lock.json  package.json  start_devenv.sh
viduce-streamer/src/: camera.ts  main.ts  resize.test.ts  resize.ts
