[package]
name = "app_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["base64"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
