[package]
name = "upscaler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "http2", "charset", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
mockito = { version = "1.6" }
util = { path = "../util" }
